[metadata]
name = LightBridge-hbisneto
version = 1.1
description = A PyBridge extension to manipulate FileSystem locations on any platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hbisneto/LightBridge/
author = Heitor Bisneto
author_email = heitor.bardemaker@live.com
maintainer = Heitor Bisneto
maintainer_email = heitor.bardemaker@live.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: LinuxOS :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = bridge, ponte, virtual
project_urls =
    Source = https://github.com/hbisneto/LightBridge/
    Tracker = https://github.com/hbisneto/LightBridge/issues

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0